# asearch

./: .gitignore  Dockerfile  app.py  compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  webpack.config.js
.devcontainer/: devcontainer.json
.github/workflows/: deploy-image.yml
scripts/: install-dev-tools.sh
src/: App.tsx  app.py  app.tsx  index.tsx
