[tool.poetry]
name = "asearch"
version = "0.1.0"
description = ""
authors = ["David Gootman <gootman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
fastapi = "^0.95.1"
fastapi-cache2 = "^0.2.1"
loguru = "^0.7.0"
requests = "^2.30.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
