[tool.poetry]
name = "asearch"
version = "0.1.0"
description = ""
authors = ["David Gootman <gootman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
requests = "^2.32.3"
streamlit = "^1.40.1"
streamlit-aggrid = "^1.0.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
